# nestor

./: Cargo.toml  flake.nix  rustfmt.toml
src/: config.rs  json.rs  main.rs
src/workflow/: audio_sink.rs  bookmarks.rs  combo.rs  disks.rs  hyprland.rs  mod.rs  root.rs  run.rs  secrets.rs  unicode.rs  websearch.rs
