[package]
name = "nestor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = ">=1.0"
freedesktop-desktop-entry = ">=0.6"
http = ">=1.1"
nom = ">= 7"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
tracing = ">=0.1"
tracing-subscriber = ">=0.3"
xdg = "2"

[lints.clippy]
pedantic = "warn"
